tests/spec/format/snapshots/type_argument_integer_formats_like_value_literal.snap
---
source: tests/spec/format/mod.rs
description: "fn test(a: Array<byte, 0x10>, b: Array<byte, 1_000>, c: Array<byte, 16>) {}"
---
fn test(a: Array<byte, 0x10>, b: Array<byte, 1000>, c: Array<byte, 16>) {}
