tests/spec/format/snapshots/unary_deref.snap
---
source: tests/spec/format/mod.rs
description: "input: fn test() { ptr.* }"
---
fn test() {
  ptr.*
}
