tests/spec/format/snapshots/unary_negation.snap
---
source: tests/spec/format/mod.rs
description: "input: fn test() { -42 }"
---
fn test() {
  -42
}
