tests/spec/format/snapshots/unary_not.snap
---
source: tests/spec/format/mod.rs
description: "input: fn test() { !flag }"
---
fn test() {
  !flag
}
