tests/spec/format/snapshots/unit_in_option_type_param.snap
---
source: tests/spec/format/mod.rs
description: "fn maybe() -> Option<()> { Some(()) }"
---
fn maybe() -> Option<()> {
  Some(())
}
