tests/spec/format/snapshots/unit_in_result_type_param.snap
---
source: tests/spec/format/mod.rs
description: "fn fallible() -> Result<(), string> { Ok(()) }"
---
fn fallible() -> Result<(), string> {
  Ok(())
}
