tests/spec/format/snapshots/unit_return_type_annotation.snap
---
source: tests/spec/format/mod.rs
description: "fn do_nothing() -> () { () }"
---
fn do_nothing() -> () {
  ()
}
