tests/spec/format/snapshots/var_public.snap
---
source: tests/spec/format/mod.rs
description: "pub var Stdin: Ref<File>"
---
pub var Stdin: Ref<File>
