tests/spec/format/snapshots/var_simple.snap
---
source: tests/spec/format/mod.rs
description: "var ErrNotFound: error"
---
var ErrNotFound: error
