tests/spec/format/snapshots/while_let_simple.snap
---
source: tests/spec/format/mod.rs
description: "fn test(opt: Option<int>) { while let Some(x) = opt { use(x); } }"
---
fn test(opt: Option<int>) {
  while let Some(x) = opt {
    use(x)
  }
}
