tests/spec/format/snapshots/while_let_tuple_pattern.snap
---
source: tests/spec/format/mod.rs
description: "fn test(opt: Option<(int, int)>) { while let Some((a, b)) = opt { use(a + b); } }"
---
fn test(opt: Option<(int, int)>) {
  while let Some((a, b)) = opt {
    use(a + b)
  }
}
